syntax = "proto3";
option csharp_namespace = "GrpcAgent";
package GrpcAgent;

service Subscriber {
  rpc Subscribe (SubscribeRequest) returns (SubscribeReply);
}

message SubscribeRequest {
  string topic   = 1;
  string address = 2; // http://host:port (Notifier on receiver)
}

message SubscribeReply {
  bool isSuccess = 1;
  string error   = 2;
}
